--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ dj-database-url==0.5.0
 Django==3.2.8
 django-bootstrap3==10.0.1
 django-heroku==0.3.1
+django-utils-six==2.0
 gunicorn==20.1.0
 Pillow==8.4.0
 psycopg2==2.9.1
